--- a/src/employer-view/tenders-details.html
+++ b/src/employer-view/tenders-details.html
@@ -31,7 +31,7 @@
                       <h1 class="h1 fw-bolder mb-14">Tender Details</h1>
 
                       <form class="form">
-                        <div class="mb-30">
+                        <div class="mb-36">
                           <div class="mb-3">
                             <div class="mb-0">
                               <div class="row g-0 align-items-center">
@@ -44,7 +44,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-email" class="fs-6 lh-base col-form-label py-0">Status:</label>
@@ -55,7 +55,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-phone" class="fs-6 lh-base col-form-label py-0">Pricing View:</label>
@@ -66,7 +66,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-type" class="fs-6 lh-base col-form-label py-0">Visibility:</label>
@@ -77,7 +77,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-expertise" class="fs-6 lh-base col-form-label py-0">Date Posted:</label>
@@ -88,7 +88,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-years-expertise" class="fs-6 lh-base col-form-label py-0"> Deadline:</label>
@@ -99,7 +99,7 @@
                               </div>
                             </div>
 
-                            <div class="mb-0">
+                            <div class="mb-1">
                               <div class="row g-0 align-items-center">
                                 <div class="col-sm-auto">
                                   <label for="profile-years-expertise" class="fs-6 lh-base col-form-label py-0"> Time Left:</label>
@@ -112,19 +112,19 @@
                           </div>
 
                           <div class="row g-2">
-                            <div class="col-lg-auto">
-                              <a href="#" class="btn btn-light px-4">
+                            <div class="col-auto">
+                              <a href="#" class="btn btn-light px-36">
                                 Edit
                               </a>
                             </div>
 
-                            <div class="col-lg-auto">
+                            <div class="col-auto">
                               <a href="#" class="btn btn-primary px-4">
                                 Withdraw
                               </a>
                             </div>
 
-                            <div class="col-lg-auto">
+                            <div class="col-auto">
                               <a href="#" class="btn btn-primary px-4">
                                 Invite More
                               </a>
@@ -133,9 +133,9 @@
                         </div>
                       
 
-                        <div class="mb-30">
+                        <div class="mb-36">
                           <div class="d-flex mb-2 align-items-center justify-content-between">
-                            <div class="form-label mb-0">
+                            <div class="fs-6 lh-base form-label mb-0">
                               Bids Comparison
                             </div>
 
@@ -235,16 +235,16 @@
                             </table>
                           </div>
 
-                          <div class="pb-20 border-bottom">
-                            <div class="row">
-                              <div class="col-lg-4 text-end">
-                                <div class="form-label">
+                          <div class="pb-10 border-bottom">
+                            <div class="row align-items-center">
+                              <div class="col-md-3 col-lg-4 text-lg-end">
+                                <div class="fs-6 lh-base form-label">
                                   Total
                                 </div>
                               </div>
 
-                              <div class="col-lg-auto">
-                                <ul class="list-unstyled mb-0">
+                              <div class="col-4 col-md-3 col-lg-2">
+                                <ul class="list-unstyled mb-0 ps-xl-4 small">
                                   <li>
                                     <small>33x100</small>
                                   </li>
@@ -260,8 +260,8 @@
                                 </ul>
                               </div>
 
-                              <div class="col-lg-auto">
-                                <ul class="list-unstyled mb-0">
+                              <div class="col-4 col-md-3 col-lg-2">
+                                <ul class="list-unstyled mb-0 ps-xl-4 small">
                                   <li>
                                     <small>21x100</small>
                                   </li>
@@ -277,8 +277,8 @@
                                 </ul>
                               </div>
 
-                              <div class="col-lg-auto">
-                                <ul class="list-unstyled mb-0">
+                              <div class="col-4 col-md-3 col-lg-2">
+                                <ul class="list-unstyled mb-0 ps-xl-4 small">
                                   <li>
                                     <small>14x100</small>
                                   </li>
@@ -297,15 +297,15 @@
                           </div>
 
                           <div class="pt-3">
-                            <div class="row">
-                              <div class="col-lg-4 text-end">
-                                <div class="form-label">
+                            <div class="row align-items-center">
+                              <div class="col-md-3 col-lg-4 text-lg-end">
+                                <div class="fs-6 lh-base form-label">
                                   Lowest <br>Possible Total
                                 </div>
                               </div>
 
-                              <div class="col-lg-auto">
-                                <ul class="list-unstyled mb-0">
+                              <div class="col-md-9 col-lg-auto">
+                                <ul class="list-unstyled mb-0 ps-xl-4 small">
                                   <li>
                                     <small>14X100 (Vendor 3)</small>
                                   </li>
@@ -324,39 +324,43 @@
                           </div>
                         </div>
 
-                        <div class="mb-2">
-                          <div class="form-label mb-2">
+                        <div class="mb-36 mb-lg-5">
+                          <div class="fs-6 lh-base form-label mb-2">
                             Vendor with lowest prices
                           </div>
 
-                          <div class="table-responsive table-rounded table-auto mb-30 shadow bg-white rounded-1">
-                            <table class="table table-striped mb-0">
-                              <thead>
-                                <tr>
-                                  <th class="text-center"><div>Vendor</div></th>
-                                  <th><div>Number of Lowest Prices</div></th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td class="text-center"><div>Vendor 1</div></td>
-                                  <td><div>2</div></td>
-                                </tr>
-                                <tr>
-                                  <td class="text-center"><div>Vendor 2</div></td>
-                                  <td><div>1</div></td>
-                                </tr>
-                                <tr>
-                                  <td class="text-center"><div>Vendor 3</div></td>
-                                  <td><div>0</div></td>
-                                </tr>
-                              </tbody>
-                            </table>
+                          <div class="row">
+                            <div class="col-lg-6">
+                              <div class="table-responsive table-rounded mb-30 shadow bg-white rounded-1">
+                                <table class="table table-striped mb-0">
+                                  <thead>
+                                    <tr>
+                                      <th class="text-center"><div>Vendor</div></th>
+                                      <th><div>Number of Lowest Prices</div></th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <td class="text-center"><div>Vendor 1</div></td>
+                                      <td><div>2</div></td>
+                                    </tr>
+                                    <tr>
+                                      <td class="text-center"><div>Vendor 2</div></td>
+                                      <td><div>1</div></td>
+                                    </tr>
+                                    <tr>
+                                      <td class="text-center"><div>Vendor 3</div></td>
+                                      <td><div>0</div></td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </div>
+                            </div>
                           </div>
                         </div>
 
-                        <div class="mb-30">
-                          <div class="form-label mb-2">
+                        <div class="mb-36">
+                          <div class="fs-6 lh-base form-label mb-2">
                             Finalize Tender
                           </div>
 
@@ -403,7 +407,7 @@
                         </div>
 
                         <div class="text-end pt-10">
-                          <button type="submit" class="btn btn-primary">
+                          <button type="submit" class="btn btn-primary px-36">
                             Finalize
                           </button>
                         </div>
