--- a/src/authorization/registration-contractror-individual.html
+++ b/src/authorization/registration-contractror-individual.html
@@ -23,7 +23,7 @@
               </a>
 
               <div class="row justify-content-center">
-                <div class="col-lg-9">
+                <div class="col-lg-11 col-xl-9">
                   <div class="sm mx-auto shadow rounded-3 text-center pt-4 pb-3 px-4">
                     <form class="form ">
                       <h1 class="h2 fw-bolder mb-4">
@@ -198,7 +198,7 @@
                             <label for="registration-experience" class="col-form-label py-0">Years of Experience</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="position-relative">
+                            <div class="custom-select position-relative">
                               <select class="form-select" id="registration-experience" aria-label="Years of Experience">
                                 <option selected>Years of Experience</option>
                                 <option value="1">One</option>
