--- a/src/contractor-view/profile.html
+++ b/src/contractor-view/profile.html
@@ -108,7 +108,7 @@
 
                             <div class="mb-2">
                               <div class="row g-0">
-                                <div class="col-sm-auto">
+                                <div class="col-sm-auto pt-2">
                                   <label for="profile-cover-letter" class="fs-6 lh-base col-form-label py-0">Cover letter:</label>
                                 </div>
                                 <div class="col">
