--- a/src/employer-view/tenders-live.html
+++ b/src/employer-view/tenders-live.html
@@ -100,7 +100,7 @@
                           </div>
                         </div>
 
-                        <div class="text-end pt-30">
+                        <div class="text-end pt-30 pt-xl-6 mt-xl-6">
                           <button type="submit" class="btn btn-light px-36">
                             Skip For Now
                           </button>
