--- a/src/employer-view/tenders-new-save.html
+++ b/src/employer-view/tenders-new-save.html
@@ -33,7 +33,7 @@
                       <form class="form">
 
                         <div class="row">
-                          <div class="col-lg-6">
+                          <div class="col-lg-7 col-xl-6">
                             <div class="mb-4 pb-2">
                               <small class="d-block mb-10">
                                 Step 2/2
@@ -146,7 +146,7 @@
                             </div>
                           </div>
 
-                          <div class="col-lg-6">
+                          <div class="col-lg-5 col-xl-6">
                             <img src="../images/img-3.svg" alt="" class="img-fluid d-block mx-auto mt-lg-3 ms-lg-3">
                           </div>
                         </div>
