--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,21 @@
 						  </div>
 						</div>
 					</div>
+          
+
+
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="custom-select position-relative">
+							  <select class="form-select" id="registration-business-type" aria-label="Business Type">
+							    <option selected>Business Type</option>
+							    <option value="1">One</option>
+							    <option value="2">Two</option>
+							    <option value="3">Three</option>
+							  </select>
+							</div>
+						</div>
+					</div>
 
 					<a href="#" class="btn btn-link">
 						Forgot your password?
@@ -121,6 +136,81 @@
 				</nav>
 
 				<svg class="icon icon-alarm"><use xlink:href="#icon-alarm"></use></svg>
+
+				<div class="bg-white btn-group-vertical h-100 justify-content-start">				  
+				  <div class="btn-group-item"><a href="signup.html" class="btn btn-link text-start">
+				  	authorization/signup.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="registration-contractror-individual.html" class="btn btn-link text-start">
+				  	authorization/registration-contractror-individual.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="registration-contractror-company.html" class="btn btn-link text-start">
+				  	authorization/registration-contractror-company.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="registration-employer.html" class="btn btn-link text-start">
+				  	authorization/registration-employer.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="registration-complete.html" class="btn btn-link text-start">
+				  	authorization/registration-complete.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="create-account.html" class="btn btn-link text-start">
+				  	authorization/create-account.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="reset-password.html" class="btn btn-link text-start">
+				  	authorization/reset-password.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="profile.html" class="btn btn-link text-start">
+				  	contractor-view/profile.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="bids.html" class="btn btn-link text-start">
+				  	contractor-view/bids.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="bids-submit.html" class="btn btn-link text-start">
+				  	contractor-view/bids-submit.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="bids-view.html" class="btn btn-link text-start">
+				  	contractor-view/bids-view.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="search-tenders.html" class="btn btn-link text-start">
+				  	contractor-view/search-tenders.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="search-tenders-results.html" class="btn btn-link text-start">
+				  	contractor-view/search-tenders-results.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="inbox-messages.html" class="btn btn-link text-start">
+				  	contractor-view/inbox-messages.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="notifications.html" class="btn btn-link text-start">
+				  	contractor-view/notifications.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="notifications-settings.html" class="btn btn-link text-start">
+				  	contractor-view/notifications-settings.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="password.html" class="btn btn-link text-start">
+				  	contractor-view/password.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="email.html" class="btn btn-link text-start">
+				  	contractor-view/email.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="tenders.html" class="btn btn-link text-start">
+				  	employer-view/tenders.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="tenders-new.html" class="btn btn-link text-start">
+				  	employer-view/tenders-new.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="tenders-new-save.html" class="btn btn-link text-start">
+				  	employer-view/tenders-new-save.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="tenders-details.html" class="btn btn-link text-start">
+				  	employer-view/tenders-details.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="tenders-live.html" class="btn btn-link text-start">
+				  	employer-view/tenders-live.html
+				  </a></div>
+				  <div class="btn-group-item"><a href="search-service.html" class="btn btn-link text-start">
+				  	employer-view/search-service.html
+				  </a></div>
+				</div>
 			</div>
 		</main>
 	</div>
