--- a/src/authorization/registration-contractror-company.html
+++ b/src/authorization/registration-contractror-company.html
@@ -23,7 +23,7 @@
               </a>
 
               <div class="row justify-content-center">
-                <div class="col-lg-9">
+                <div class="col-lg-11 col-xl-9">
                   <div class="sm mx-auto shadow rounded-3 text-center pt-4 pb-3 px-4">
                     <form class="form ">
                       <h1 class="h2 fw-bolder mb-4">
@@ -198,7 +198,7 @@
                             <label for="registration-business-type" class="col-form-label py-0">Business Type</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="position-relative">
+                            <div class="custom-select position-relative">
                               <select class="form-select" id="registration-business-type" aria-label="Business Type">
                                 <option selected>Business Type</option>
                                 <option value="1">One</option>
@@ -216,7 +216,7 @@
                             <label for="registration-turnover" class="col-form-label py-0">Turnover</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="position-relative">
+                            <div class="custom-select position-relative">
                               <select class="form-select" id="registration-turnover" aria-label="Turnover">
                                 <option selected>Turnover</option>
                                 <option value="1">One</option>
@@ -234,7 +234,7 @@
                             <label for="registration-number-emloyees" class="col-form-label py-0">Number of Emloyees</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="position-relative">
+                            <div class="custom-select position-relative">
                               <select class="form-select" id="registration-number-emloyees" aria-label="Number of Emloyees">
                                 <option selected>Number of Emloyees</option>
                                 <option value="1">One</option>
@@ -252,7 +252,7 @@
                             <label for="registration-years-experience" class="col-form-label py-0">Years of Experience</label>
                           </div>
                           <div class="col-sm-8 col-lg-7">
-                            <div class="position-relative">
+                            <div class="custom-select position-relative">
                               <select class="form-select" id="registration-years-experience" aria-label="Years of Experience">
                                 <option selected>Years of Experience</option>
                                 <option value="1">One</option>
