--- a/src/contractor-view/password.html
+++ b/src/contractor-view/password.html
@@ -35,13 +35,15 @@
                       
                       <form class="form">
                         <div class="row g-0 mb-3">
-                          <div class="col-lg-4">
+                          <div class="col-lg-6 col-xl-4">
                             <div class="mb-10">
                               <div class="password position-relative">
-                                <input type="password" class="form-control" placeholder="Password">
-                                <a href="#" class="btn position-absolute top-0 end-0">
-                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
-                                </a>
+                                <div class="position-relative">
+                                  <input type="password" class="form-control" placeholder="Password">
+                                  <a href="#" class="btn position-absolute top-0 end-0">
+                                    <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                  </a>
+                                </div>
                               </div>
                               <a href="#" class="btn btn-link text-decoration-none">
                                 Forgot your password?
@@ -50,19 +52,23 @@
 
                             <div class="mb-10">
                               <div class="password position-relative is-valid">
-                                <input type="password" class="form-control" value="Password">
-                                <a href="#" class="btn position-absolute top-0 end-0">
-                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
-                                </a>
+                                <div class="position-relative">
+                                  <input type="password" class="form-control" value="Password">
+                                  <a href="#" class="btn position-absolute top-0 end-0">
+                                    <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                  </a>
+                                </div>
                               </div>
                             </div>
 
                             <div class="mb-10">
                               <div class="password position-relative is-valid">
-                                <input type="text" class="form-control" value="Password">
-                                <a href="#" class="btn position-absolute top-0 end-0">
-                                  <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
-                                </a>
+                                <div class="position-relative">
+                                  <input type="text" class="form-control" value="Password">
+                                  <a href="#" class="btn position-absolute top-0 end-0">
+                                    <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                  </a>
+                                </div>
                               </div>
                             </div>
                           </div>
