--- a/src/employer-view/tenders-new.html
+++ b/src/employer-view/tenders-new.html
@@ -33,7 +33,7 @@
                       <form class="form">
 
                         <div class="row g-0">
-                          <div class="col-lg-6">
+                          <div class="col-lg-7 col-xl-6">
                             <div class="mb-4 pb-2">
                               <small class="d-block mb-10">
                                 Step 1/2
@@ -146,7 +146,7 @@
                             </div>
                           </div>
 
-                          <div class="col-lg-6">
+                          <div class="col-lg-5 col-xl-6">
                             <img src="../images/img-3.svg" alt="" class="img-fluid d-block mx-auto mt-lg-3 ms-lg-3">
                           </div>
                         </div>
@@ -218,7 +218,7 @@
                             </div>
 
                             <div class="text-center">
-                              <a href="#" class="btn btn-light px-lg-5">
+                              <a href="#" class="btn btn-light px-36 px-lg-5">
                                 + Add More
                               </a>
                             </div>
@@ -233,7 +233,7 @@
                             </div>
                           </div>
                           <div class="col-lg-12">
-                            <a href="#" class="btn btn-light px-lg-5">
+                            <a href="#" class="btn btn-light px-36 px-lg-5">
                               + Add More
                             </a>
                           </div>
