--- a/src/authorization/registration-employer.html
+++ b/src/authorization/registration-employer.html
@@ -92,9 +92,10 @@
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative">
                               <div class="file d-flex align-items-center justify-content-between">
-                                <a href="#" class="btn btn-light px-lg-4">
-                                  Choose File
-                                </a>
+                                <label class="btn btn-light px-lg-4">
+                                  <span>Choose File</span>
+                                  <input type="file" >
+                                </label>
                                 <span class="form-label">
                                   No file chosen
                                 </span>
