--- a/src/contractor-view/search-tenders.html
+++ b/src/contractor-view/search-tenders.html
@@ -41,7 +41,7 @@
                             <div class="col-xl-8">
                               <form class="form">
                                 <div class="mb-14">
-                                  <div class="position-relative">
+                                  <div class="custom-select position-relative">
                                     <select class="form-select" aria-label="Industry">
                                       <option selected>Industry</option>
                                       <option value="1">One</option>
