--- a/src/employer-view/tenders-new-save.html
+++ b/src/employer-view/tenders-new-save.html
@@ -63,7 +63,7 @@
                                   <label for="tender-pricing" class="fs-6 lh-base col-form-label py-0">Pricing Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
-                                  <div class="position-relative">
+                                  <div class="custom-select position-relative">
                                     <select class="form-select d-none" id="tender-pricing" aria-label="Business Type">
                                       <option value="1" selected>Option 1</option>
                                       <option value="2">Two</option>
@@ -81,7 +81,7 @@
                                   <label for="tender-visibility" class="fs-6 lh-base col-form-label py-0">Tender Visibility: <span class="text-warning"><svg class="icon icon-info"><use xlink:href="#icon-info"></use></svg></span></label> 
                                 </div>
                                 <div class="col-sm-8 col-lg-7">
-                                  <div class="position-relative">
+                                  <div class="custom-select position-relative">
                                     <select class="form-select d-none" id="tender-visibility" aria-label="Business Type">
                                       <option value="1" selected>Option 1</option>
                                       <option value="2">Two</option>
