--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,22 @@
 							  </select>
 							</div>
 						</div>
+
+						<div class="col-lg-4">
+							<div class="file d-flex align-items-center justify-content-between">
+								<label class="btn btn-light px-lg-4">
+									<span>Choose File</span>
+									<input type="file" >
+								</label>
+							  <span class="form-label">
+							    No file chosen
+							  </span>
+							</div>
+						</div>
+
+						<div class="col-lg-4">
+							Calendar
+						</div>
 					</div>
 
 					<a href="#" class="btn btn-link">
