--- a/src/contractor-view/search-tenders.html
+++ b/src/contractor-view/search-tenders.html
@@ -53,11 +53,11 @@
 
                                 <div class="mb-14">
                                   <div class="calendar position-relative">
-                                    <input type="text" name="Deadline" class="form-control" placeholder="Deadline">
+                                    <input type="text" name="Deadline" class="form-control flatpickr" placeholder="Deadline">
 
-                                    <button class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
+                                    <span class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
                                       <svg class="icon icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
-                                    </button>
+                                    </span>
                                   </div>
                                 </div>
 
