--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,13 @@
 						</div>
 
 						<div class="col-lg-4">
-							Calendar
+							<div class="calendar position-relative">
+                <input type="text" name="Deadline" class="form-control flatpickr" placeholder="Deadline">
+
+                <span class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
+                  <svg class="icon icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
+                </span>
+              </div>
 						</div>
 					</div>
 
