--- a/src/employer-view/tenders-new.html
+++ b/src/employer-view/tenders-new.html
@@ -100,12 +100,12 @@
                                 </div>
                                 <div class="col-sm-8 col-lg-7 ms-xl-n5">
                                   <div class="position-relative">
-                                    <div class="calendar">
-                                      <input type="text" name="Deadline" class="form-control" value="11/07/2021 ">
+                                    <div class="calendar position-relative">
+                                      <input type="text" name="Deadline" class="form-control flatpickr" placeholder="Deadline">
 
-                                      <button class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
+                                      <span class="btn h-100 border-start rounded-0 position-absolute top-0 end-0">
                                         <svg class="icon icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
-                                      </button>
+                                      </span>
                                     </div>
 
                                     <input type="hidden" class="form-control" value="Option 1" readonly>
