--- a/src/authorization/registration-employer.html
+++ b/src/authorization/registration-employer.html
@@ -38,6 +38,9 @@
                           <div class="col-sm-8 col-lg-7">
                             <div class="position-relative is-valid">
                               <input type="text" id="registration-name" class="form-control" value="Vasyl" >
+                              <div class="invalid-feedback">
+                                Please choose a username.
+                              </div>
                             </div>
                           </div>
                         </div>
