--- a/src/contractor-view/password.html
+++ b/src/contractor-view/password.html
@@ -39,10 +39,15 @@
                             <div class="mb-10">
                               <div class="password position-relative">
                                 <div class="position-relative">
-                                  <input type="password" class="form-control" placeholder="Password">
-                                  <a href="#" class="btn position-absolute top-0 end-0">
-                                    <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
-                                  </a>
+                                  <div class="position-relative">
+                                    <input type="password" class="form-control" placeholder="Password">
+                                    <a href="#" class="btn position-absolute top-0 end-0">
+                                      <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                    </a>
+                                  </div>
+                                  <div class="invalid-feedback">
+                                    Please choose a username.
+                                  </div>
                                 </div>
                               </div>
                               <a href="#" class="btn btn-link text-decoration-none">
@@ -53,10 +58,15 @@
                             <div class="mb-10">
                               <div class="password position-relative is-valid">
                                 <div class="position-relative">
-                                  <input type="password" class="form-control" value="Password">
-                                  <a href="#" class="btn position-absolute top-0 end-0">
-                                    <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
-                                  </a>
+                                  <div class="position-relative">
+                                    <input type="password" class="form-control" value="Password">
+                                    <a href="#" class="btn position-absolute top-0 end-0">
+                                      <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg>
+                                    </a>
+                                  </div>
+                                  <div class="invalid-feedback">
+                                    Please choose a username.
+                                  </div>
                                 </div>
                               </div>
                             </div>
