--- a/src/employer-view/tenders.html
+++ b/src/employer-view/tenders.html
@@ -104,8 +104,8 @@
                                   </ul>
                                 </div>
                               </th>
-                              <th><div>Posted</div></th>
-                              <th><div>Deadline</div></th>
+                              <th><div data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">Posted</div></th>
+                              <th><div data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">Deadline</div></th>
                               <th>
                                 <div class="dropdown">
                                   <a class="dropdown-toggle" type="button" id="dropdownStatus" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
@@ -114,27 +114,30 @@
 
                                   <ul class="dropdown-menu" aria-labelledby="dropdownStatus">
                                     <li class="dropdown-item">
-                                      <div class="form-check radio">
-                                        <input class="form-check-input" type="radio" name="exampleStatus" id="exampleStatus1" value="option1" checked>
-                                        <label class="form-check-label" for="exampleStatus1">
-                                          Open Status
-                                        </label>
+                                      <div class="form-check radio ps-0">
+                                        <a href="#">
+                                          <span class="form-check-label">
+                                            Open Status
+                                          </span>
+                                        </a>
                                       </div>
                                     </li>
                                     <li class="dropdown-item">
-                                      <div class="form-check radio">
-                                        <input class="form-check-input" type="radio" name="exampleStatus" id="exampleStatus2" value="option2">
-                                        <label class="form-check-label" for="exampleStatus2">
-                                          Closed Status
-                                        </label>
+                                      <div class="form-check radio ps-0">
+                                        <a href="#">
+                                          <span class="form-check-label">
+                                            Closed Status
+                                          </span>
+                                        </a>
                                       </div>
                                     </li>
                                     <li class="dropdown-item">
-                                      <div class="form-check radio">
-                                        <input class="form-check-input" type="radio" name="exampleStatus" id="exampleStatus3" value="option3">
-                                        <label class="form-check-label" for="exampleStatus3">
-                                          Ather
-                                        </label>
+                                      <div class="form-check radio ps-0">
+                                        <a href="#">
+                                          <span class="form-check-label">
+                                            Ather
+                                          </span>
+                                        </a>
                                       </div>
                                     </li>
                                   </ul>
