--- a/src/index.html
+++ b/src/index.html
@@ -202,6 +202,9 @@
 				  <div class="btn-group-item"><a href="inbox-messages.html" class="btn btn-link text-start">
 				  	contractor-view/inbox-messages.html
 				  </a></div>
+				  <div class="btn-group-item"><a href="inbox-messages-test-full.html" class="btn btn-link text-start">
+				  	contractor-view/inbox-messages-test-full.html
+				  </a></div>
 				  <div class="btn-group-item"><a href="notifications.html" class="btn btn-link text-start">
 				  	contractor-view/notifications.html
 				  </a></div>
