--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 		<!-- Main content  : start -->
     <main class="page-content">  
 			<div class="container">
-				<h1 class="h1 fw-bolder">My Bids</h1>
+				<h1 class="h1 fw-bolder">My Bids тест</h1>
 				<h6 class="fsz-18 mb-20">List of Active Tenders you have bid on</h6>
 
 				<form class="form">
