--- a/tender-home/index.html
+++ b/tender-home/index.html
@@ -30,35 +30,124 @@
         
         <!-- Main content  : start -->
         <main class="page-content">            
-            <div class="container">
+            <div class="container">              
+
                 <div class="lg-xs bg-white shadow-lg rounded-3 mx-auto py-6 px-2 p-lg-6 position-relative">
-                	<h1 class="display-1 fw-bolder mb-3">
-                		ZoomTender 
-                	</h1>
-                	<p class="fw-600 fs-4">
-                		is an End-to-End E-Tender Management Platform
-                	</p>
+                	<div class="row">
+                        <div class="col-lg-6">
+                            <h1 class="display-1 fw-bolder mb-3">
+                                ZoomTender 
+                            </h1>
+                            <p class="fw-600 fs-4">
+                                is an End-to-End E-Tender Management Platform
+                            </p>
+                            <a href="#" class="btn btn-outline-primary bw-2">
+                                <svg class="icon icon-play"><use xlink:href="#icon-play"></use></svg>
+                                <span class="ms-2">Watch Video</span>
+                            </a>
+                        </div>
 
-                	<a href="#" class="btn btn-outline-primary bw-2">
-                		<svg class="icon icon-play"><use xlink:href="#icon-play"></use></svg>
-                		<span class="ms-2">Watch Video</span>
-                	</a>
+                        <div class="col-lg-6">
+                            <img src="images/img-1.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
 
-                	<h2 class="display-2 fw-bolder mb-3">
-                		Are you an Employer?
-                	</h2>
-                	<p class="fs-4-2 fw-500">
-                		User ZoomTender to invite e-tenders and get the best rates!
-                	</p>
-                	<a href="#" class="btn btn-primary bw-2">
-                		I`m an Employer
-                	</a>
+                    <div class="row g-2">
+                        <div class="col-4">
+                            <div class="shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
+                                <img src="home/icon-1.svg" alt="">
+                                <span class="fw-600 ms-2">Fast</span>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
+                                <img src="home/icon-2.svg" alt="">
+                                <span class="fw-600 ms-2">Paperless</span>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="shadow rounded-3 p-3 d-flex align-items-center justify-content-center">
+                                <img src="home/icon-3.svg" alt="">
+                                <span class="fw-600 ms-2">Eliminate Fraud</span>
+                            </div>
+                        </div>
+                    </div>
 
-                	<div class="row g-2">
-                		<div class="col-4">
-                			
-                		</div>
-                	</div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h2 class="display-2 fw-bolder mb-3">
+                                Are you an Employer?
+                            </h2>
+                            <p class="fs-4-2 fw-500">
+                                User ZoomTender to invite e-tenders and get the best rates!
+                            </p>
+                            <a href="#" class="btn btn-primary bw-2">
+                                I`m an Employer
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <img src="images/img-2.png" alt="" class="img-fluid">
+                        </div>
+                    </div> 
+
+                    <div class="row flex-sm-row-reverse">
+                        <div class="col-lg-6">
+                            <h2 class="display-2 fw-bolder mb-3">
+                                Are you a Contractor?
+                            </h2>
+                            <p class="fs-4-2 fw-500">
+                                Find new tenders to bid on!
+                            </p>
+                            <a href="#" class="btn btn-primary bw-2">
+                                I`m a Contractor
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <img src="images/img-3.png" alt="" class="img-fluid">
+                        </div>
+                    </div> 
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h2 class="display-3 fw-bolder mb-3">
+                                Contact Us
+                            </h2>
+
+                            <form class="form">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="position-relative">
+                                            <input type="text" name="name" class="form-control" placeholder="Last Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="position-relative">
+                                            <input type="text" name="name" class="form-control" placeholder="First Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="position-relative">
+                                            <input type="text" name="name" class="form-control" placeholder="E-mail">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="position-relative">
+                                            <input type="text" name="name" class="form-control" placeholder="Mobile Phone">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <textarea name="name" rows="4" class="form-control" placeholder="Description"></textarea>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary">
+                                    Send
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+
                 </div>
             </div>                    
         </main> <!-- Main content  : end -->
